--- a/5-projects-motion/together/index.html
+++ b/5-projects-motion/together/index.html
@@ -4,25 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5.js Starter Project</title>
-    <style>
-    html,
-    body {
-        height: 100%;
-    }
-
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    main {
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: flex-end;
-    }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main>
