Update index.html fuer all motion projects

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 	</head>
 	<body>
 		<ul>
-			<li><a href="5-projects-motion">my motion projects</a>
+			<li><a href="5-projects-motion/all-around/index.html">all around</a>
+	
+			</a></li>
+			<li><a href="5-projects-motion/in-a-line/index.html">in aline</a>
+	
+			</a></li>
+			<li><a href="5-projects-motion/in-a-row/index.html">in a row</a>
+	
+			</a></li>
+			<li><a href="5-projects-motion/together/index.html">together</a>
+	
+			</a></li>
+			<li><a href="5-projects-motion/zick-zack/index.html">zick zack</a>
 	
 			</a></li>
 		</ul>
