--- a/analog-algorithm/index.html
+++ b/analog-algorithm/index.html
@@ -17,7 +17,10 @@
                     <img src="images/algoritmus1__.JPG">
                     <button class="nav-button next">&#10095;</button>
                 </div>
-                <div p>Algorithm 1</div p="untertitle">
+                <div class="info-title1">Algorithm 1</div>
+                <div class="info-content1">
+                    <p>This is additional information about Algorithm 1. Click the title to show or hide this content.</p>
+                </div>
             </div>
             <div class="card">
                 <div class="carousel">
@@ -27,7 +30,10 @@
                     <img src="images/Algorithmus2.1.jpg">
                     <button class="nav-button next">&#10095;</button>
                 </div>
-                <div p>Algorithm 2</div p="untertitle">
+                <div class="info-title2">Algorithm 2</div>
+                <div class="info-content2">
+                    <p>This is additional information about Algorithm 2. Click the title to show or hide this content.</p>
+                </div>
             </div>
             <div class="card">
                 <div class="carousel">
@@ -37,13 +43,16 @@
                     <img src="images/Algorithmus3_.JPG">
                     <button class="nav-button next">&#10095;</button>
                 </div>
-                <div p>Algorithm 3</div p="untertitle">
+                <div class="info-title3">Algorithm 3</div>
+                <div class="info-content3">
+                    <p>This is additional information about Algorithm 3. Click the title to show or hide this content.</p>
+                </div>
             </div>
         </div> 
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum fuga, tempore provident aperiam laudantium quo quae accusantium qui quasi consequuntur saepe incidunt magni commodi mollitia rerum dolor consequatur veritatis dolores.</p>  
+        
     </div>
    
-
+    <p>Click on the title of the algortithm to get extra info.</p>  
     <script src="index.js"></script>
     <footer>
 
