--- a/perspective/index.html
+++ b/perspective/index.html
@@ -9,21 +9,36 @@
     <script src="index.js"></script>
 
 </head>
-<body>
-    
-   <div class="text">
-        <p>In my younger and more vulnerable years my father gave me some advice that I've been turning over in my mind ever since. 'Whenever you feel like criticizing anyone,' he told me, 'just remember that all the people in this world haven't had the advantages that you've had.'</p>
-
+    <body>
         <!-- <img src="https://github.com/hbk-bs/the-archives-kaltesommer/raw/main/assets/images/thearchive-cover.PNG" alt="the archive font" id="super-rabbit">  -->
+        <main>
+            <div class="ut">
+                <div class="pic" id="c1"></div>
+                <p>untertitle</p>
+            </div>
+            <div class="ut">
+                <div class="pic" id="c2"></div>
+                <p>untertitle</p>
+            </div>
+            <div class="ut">
+                <div class="pic" id="c3"></div>
+                <p>untertitle</p>
+            </div>
+        </main>
     <main>
-        <div id="c1"></div>
-        <div id="c2"></div>
-        <div id="c3"></div>
-        <div id="c4"></div>
-        <div id="c5"></div>
-       <!--  <a href="index.js">source code</a>-->
+        <div class="ut">
+            <div class="pic" id="c4"></div>
+            <p>untertitle</p>
+        </div>
+        <div class="ut">
+            <div class="pic" id="c5"></div>
+            <p>untertitle</p>
+        </div>
+        <div class="text">
+            <p>In my younger and more vulnerable years my father gave me some advice that I've been turning over in my mind ever since. 'Whenever you feel like criticizing anyone,' he told me, 'just remember that all the people in this world haven't had the advantages that you've had.'</p>
+        </div>
     </main>
-    
+    <a href="index.js">source code</a>
     <!-- <script src="./modules/p5/lib/addons/p5.sound.min.js"></> -->
    <!-- <script src="./modules/@ff6347/p5-easing/dist/p5.easing.min.js"></script> -->
 </body>
