--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <a href="index.html">Home</a>
-    <a href="analog-algorithm/index.html">analog algorithm</a>
-    <a href="perspective/index.html">perspective</a>
-    <a href="index.html">Home</a>
+	<div class="navbar">
+        <a href="main.html">Home</a>
+        <a href="projects.html">My Projects</a>
+        <a href="about.html">About </a>
+        <a href="reflection.html">Reflection</a>
+    </div>
+    <a class="projectLink" href="analog-algorithm/index.html">analog algorithm</a>
+    <a class="projectLink" href="perspective/index.html">perspective</a>
+    <a class="projectLink" href="5-projects-motion/index.html">motion</a>
+    <a class="projectLink" href="interaktion/index.html">inter action</a>
+    <a class="projectLink" href="physical-computing/index.html">physical computing</a>
 </body>
 </html>
