--- a/analog-algorithm/index.html
+++ b/analog-algorithm/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="navbar">
+        <a href="../main.html">Home</a>
+        <a href="../projects.html">My Projects</a>
+        <a href="../about.html">About </a>
+        <a href="../reflection.html">Reflection</a>
+    </div>
+
    <img src="images/Analog-Algorithm-logo.png" alt="the archive font" class="led-light-font">
     <div class="flex">
         <div class="container">
@@ -19,7 +26,7 @@
                 </div>
                 <div class="info-title1">Algorithm 1</div>
                 <div class="info-content1">
-                    <p>This is additional information about Algorithm 1. Click the title to show or hide this content.</p>
+                    <p>Use any pen on a piece of paper without lifting it. Fill the page. Do this with feelings.</p>
                 </div>
             </div>
             <div class="card">
@@ -32,7 +39,7 @@
                 </div>
                 <div class="info-title2">Algorithm 2</div>
                 <div class="info-content2">
-                    <p>This is additional information about Algorithm 2. Click the title to show or hide this content.</p>
+                    <p>Use any pen on a piece of paper without lifting it. Fill the page. Leave the edges blank. Listen to your favorite music and do it with emotion.</p>
                 </div>
             </div>
             <div class="card">
@@ -45,14 +52,16 @@
                 </div>
                 <div class="info-title3">Algorithm 3</div>
                 <div class="info-content3">
-                    <p>This is additional information about Algorithm 3. Click the title to show or hide this content.</p>
+                    <p>Use any pen on a piece of paper without lifting your finger. Fill the page. Don't just make circles, make squares too. Leave the edges blank. Listen to your favorite music and do this with your feelings.</p>
                 </div>
             </div>
         </div> 
-        
+        <p>Click on the title of the algortithm to get extra info.</p>  
+        <p> I learned how to articulate specific requirements for achieving desired outcomes on a page. Additionally, trial and error are essential processes in obtaining optimal results, even if the first two algorithms did not meet my expectations. This project has shown me the diverse ways in which individuals interpret and respond to given prompts and how their results are unique in their own ways. Ultimately, it took me three attempts to achieve the results I wanted. However, this process proved valuable, as I gained an understanding of how important the reinforcement of formulating precise instructions is in attaining expected outcomes</p>
     </div>
    
-    <p>Click on the title of the algortithm to get extra info.</p>  
+    
+
     <script src="index.js"></script>
     <footer>
 
