--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
     <div class="content">
 		<img src="documentation/portfolio-white.png" alt="the archive font" class="led-light-font">
         <h1>Welcome to My Portfolio</h1>
-        <p>In my portfolio you will see all of my projects I made in my first semester studying visual design in the modulle: digitalle kommunikation. Hope you have a great time looking at these projects. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus magni blanditiis voluptate sequi provident commodi enim. Assumenda ratione est nostrum maiores. Maiores molestiae nobis unde quibusdam quisquam! Ab, incidunt quaerat! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus ratione accusamus cum quo. Eum modi et nemo asperiores ea blanditiis veritatis dolores? Quo sunt eum perspiciatis facilis amet voluptate inventore!</p>
+        <p>This portfolio showcases all the projects I created during my first semester WS 2024/2025 studying Visual Design in the module "Digitale Kommunikation." at the HBK Braunschweig.</p>
     
 	</div>
 </body>
