--- a/perspective/index.html
+++ b/perspective/index.html
@@ -12,30 +12,38 @@
     <body>
         <!-- <img src="https://github.com/hbk-bs/the-archives-kaltesommer/raw/main/assets/images/thearchive-cover.PNG" alt="the archive font" id="super-rabbit">  -->
         <main>
+            <div class="navbar">
+                <a href="../main.html">Home</a>
+                <a href="../projects.html">My Projects</a>
+                <a href="../about.html">About </a>
+                <a href="../reflection.html">Reflection</a>
+            </div>
+
             <div class="ut">
                 <div class="pic" id="c1"></div>
-                <p>untertitle</p>
+                <p>size</p>
             </div>
             <div class="ut">
                 <div class="pic" id="c2"></div>
-                <p>untertitle</p>
+                <p>horizon</p>
             </div>
             <div class="ut">
                 <div class="pic" id="c3"></div>
-                <p>untertitle</p>
+                <p>birds-eye view</p>
             </div>
         </main>
     <main>
         <div class="ut">
             <div class="pic" id="c4"></div>
-            <p>untertitle</p>
+            <p>layered</p>
         </div>
         <div class="ut">
             <div class="pic" id="c5"></div>
-            <p>untertitle</p>
+            <p>negative space</p>
         </div>
         <div class="text">
-            <p>In my younger and more vulnerable years my father gave me some advice that I've been turning over in my mind ever since. 'Whenever you feel like criticizing anyone,' he told me, 'just remember that all the people in this world haven't had the advantages that you've had.'</p>
+            <p>The p5.js library introduced us to new perspectives on utilizing code in an artistic way by enabling the programmer to define and control every visible element. For example, in the perspective sketch 'Size,' the attributes are coded for each circle, rectangle, or other shape, allowing elements to be combined into a cohesive composition. The primary challenge was ensuring that the sketches effectively channel their intended perspective so that they met their given words. In my opinion, this was not always successful; however, this experience has provided me with valuable insight into how I can improve in the future.
+</p>
         </div>
     </main>
     <a href="index.js">source code</a>
