--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <a class="projectLink" href="analog-algorithm/index.html">analog algorithm</a>
     <a class="projectLink" href="perspective/index.html">perspective</a>
     <a class="projectLink" href="5-projects-motion/index.html">motion</a>
-    <a class="projectLink" href="interaktion/index.html">inter action</a>
+    <a class="projectLink" href="interaction/index.html">interaction</a>
     <a class="projectLink" href="physical-computing/index.html">physical computing</a>
 </body>
 </html>
