--- a/5-projects-motion/index.html
+++ b/5-projects-motion/index.html
@@ -13,13 +13,15 @@
         <a href="../about.html">About </a>
         <a href="../reflection.html">Reflection</a>
     </div>
-    <p>On this page you will see some action. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa architecto ad accusantium rerum optio, et nihil neque quae, unde animi eveniet corrupti esse dolores quod perspiciatis incidunt! Minus, assumenda explicabo!
-    My motions:</p>
+    <p>On this page you will see some action.</p>
+    <p>Click on any project</p>
         <li><a href="all-around/index.html">all around</a></li>
         <li><a href="in-a-line/index.html">in a line</a></li>
         <li><a href="zick-zack/index.html">zick-zack</a></li>
         <li><a href="together/index.html">together</a></li>
-    
+    <p> Reflection: Motion design is an essential part of webdesign, making animations more engaging and dynamic. In p5.js, motion is created through code, where objects follow a predefined path. In CSS, animations use keyframes and easing functions to create smoother transitions.
+        For example in the zigzag motion project it is based on a mathematical calculation, rather than an ease-in function, which would make the movement feel smoother. The motion follows a strict zigzag path, controlled by circleProgress and conditional logic. The object moves between points in a linear way, without acceleration or deceleration.
+        Working on this project showed me the difference between rigid mathematical motion and eased transitions. While p5.js allows for precise control, CSS animations make motion feel more natural. Combining both could improve how movement is used in visual communication.</p>
 
    
 </body>
