--- a/physical-computing/index.html
+++ b/physical-computing/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <div class="navbar">
+        <a href="../main.html">Home</a>
+        <a href="../projects.html">My Projects</a>
+        <a href="../about.html">About </a>
+        <a href="../reflection.html">Reflection</a>
+    </div>
     <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro quam laboriosam at dicta pariatur, aut voluptates sunt. Deserunt accusamus laboriosam quam voluptates, vitae, quo debitis fugiat quidem neque minus vero?</p>
     <video src="ampel-video.mp4" type="video/mp4" controls muted autoplay></video>
+
 </body>
 </html>
