--- a/analog-algorithm/index.html
+++ b/analog-algorithm/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="../main.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="../projects.html">My Projects</a>
         <a href="../about.html">About </a>
         <a href="../reflection.html">Reflection</a>
