--- a/perspective/index.html
+++ b/perspective/index.html
@@ -13,7 +13,7 @@
         <!-- <img src="https://github.com/hbk-bs/the-archives-kaltesommer/raw/main/assets/images/thearchive-cover.PNG" alt="the archive font" id="super-rabbit">  -->
         <main>
             <div class="navbar">
-                <a href="../main.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="../projects.html">My Projects</a>
                 <a href="../about.html">About </a>
                 <a href="../reflection.html">Reflection</a>
