--- a/reflection.html
+++ b/reflection.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="projects.html">My Projects</a>
         <a href="about.html">About </a>
         <a href="reflection.html">Reflection</a>
     </div>
-    <p> </p>
+    <p> hhhhh</p>
     
 </body>
 </html>
