--- a/about.html
+++ b/about.html
@@ -13,6 +13,6 @@
         <a href="about.html">About </a>
         <a href="reflection.html">Reflection</a>
     </div>
-    <p>Hallo ich bin K</p>
+    <p>Hi! I am a graphic design student studying visual design at the HBK Braunschweig. In my first semester, being in the module "digitale kommunikation", I learned to programm this website and many more projects, you will find on this website. </p>
 </body>
 </html>
