--- a/physical-computing/index.html
+++ b/physical-computing/index.html
@@ -13,7 +13,13 @@
         <a href="../about.html">About </a>
         <a href="../reflection.html">Reflection</a>
     </div>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro quam laboriosam at dicta pariatur, aut voluptates sunt. Deserunt accusamus laboriosam quam voluptates, vitae, quo debitis fugiat quidem neque minus vero?</p>
+    <p> Exploring hardware and Arduino introduced new ways to see how programming can be applied to operational machines. This was our final project of the semester. The course theme was "Albtraum Stadt" (= "Nightmare City"). First, we decided on a color scheme—red, blue, and silver—then selected materials, ensuring an upcycling approach. We also considered proportions, designing a miniature town where buildings were smaller than the cat, soda can, and other elements. Finally, we planned how the final installation should be presented.
+
+        Our group created a traffic light, constructed from cardboard and plastic cones. The hardware components included RGB LEDs, a circuit board, wires, an ultrasonic sensor, capacitors, resistors, and an Arduino board. We first tested the connections on a breadboard before soldering them together on a circuit board.
+        
+        The goal was to program the lights to respond to distance: as a person approached, the lights would activate one by one. The third light illuminated when standing furthest away, the second when moving closer, and the first when reaching the shortest distance from the sensor. This small video on the right demonstrates how the traffic light operated.
+        
+        One of the biggest challenges was coding the second light to stay visible longer, preventing it from switching too quickly to the first light. Fine-tuning the timing and responsiveness of the system required careful adjustments. This project demonstrated the versatility of coding in physical computing, highlighting how programming interacts with hardware to create interactive and dynamic installations.</p>
     <video src="ampel-video.mp4" type="video/mp4" controls muted autoplay></video>
 
 </body>
