--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
         <a href="about.html">About </a>
         <a href="reflection.html">Reflection</a>
     </div>
-    <p>Hi! I am a graphic design student studying visual design at the HBK Braunschweig. In my first semester, being in the module "digitale kommunikation", I learned to programm this website and many more projects, you will find on this website. </p>
+    <p>Hi! My name is Kirsten Visbach and I am a first-semester design student studying Visual Communication at HBK Braunschweig. 
+    This website serves as a platform to apply the knowledge I have acquired throughout the semester. I learned to programm this website and many more projects, you will find on this page.</p>
 </body>
+<footer> <p>&copy: 2025 Kirsten Visbach, All rights reserved</p></footer>
 </html>
