--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 	</head>
 	
 <body>
-	<!-- <div class="left"> <p><a href="5-projects-motion/all-around/index.html">all of my projects</a></div -->
-	<!-- <div class ="right"> <a href="5-projects-motion/all-around/index.html">about me </a></div></p> -->
 	<div class="navbar">
-        <a href="main.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="projects.html">My Projects</a>
         <a href="about.html">About </a>
         <a href="reflection.html">Reflection</a>
