--- a/interaction/index.html
+++ b/interaction/index.html
@@ -34,4 +34,5 @@
   The coding process was challenging, particularly in implementing the video camera feature so that users could see themselves in real time. Another difficulty was managing the different elements—ensuring they could be layered correctly or removed from the screen when the corresponding icon was clicked again.
   Overall, in the future, I aim to refine the video display method and introduce additional elements to provide users with a more dynamic and varied experience.
   </p>
+  <footer> <p>&copy: 2025 Kirsten Visbach, All rights reserved</p></footer>
 </html>
