--- a/physical-computing/index.html
+++ b/physical-computing/index.html
@@ -46,10 +46,10 @@
         </div>
         <div class="column">
           <img src="isolating wires.png" alt="cables soldered together">
-            <p> isolating the wires </p>
+            <p> second idea: isolating the wires </p>
            <p> In the end </p>
         </div>
-        
+        <p> ddd</p>
     </div>
 </body>
 </html>
