--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 	<div class="navbar">
         <a href="index.html">Home</a>
         <a href="projects.html">My Projects</a>
-        <a href="about.html">About </a>
+        <a href="about.html">About</a>
         <a href="reflection.html">Reflection</a>
     </div>
     <a class="projectLink" href="analog-algorithm/index.html">analog algorithm</a>
@@ -19,4 +19,5 @@
     <a class="projectLink" href="interaction/index.html">interaction</a>
     <a class="projectLink" href="physical-computing/index.html">physical computing</a>
 </body>
+<footer> <p>&copy: 2025 Kirsten Visbach, All rights reserved</p></footer>
 </html>
