final thank you

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 		<title>{kirstens archive}</title>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="alternate" href="assets/css/base.css">
 	</head>
 	
 <body>
@@ -27,6 +28,6 @@
 <main>
 </main>
 <footer>
-	<p>&copy: 2025 Kirsten Visbach, All rights reserved</p>
+	<p>&copy; 2025 Kirsten Visbach, All rights reserved</p>
 </footer>
 </html>
