--- a/interaction/index.html
+++ b/interaction/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>interaction</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="alternate" href="assets/css/base.css">
     <script src="index.js"></script>
     <script src="./modules/p5/lib/p5.js"></script>
 </head>
@@ -15,11 +16,13 @@
         <a href="../about.html">About </a>
         <a href="../reflection.html">Reflection</a>
     </div>
-    <h1>Which look for you today?</h1>
-    <h2>
-      <pre>click an icon
-    click again to undo</pre>
-    </h2>
+    <div class="textBox">
+      <h1>Which look for you today?</h1>
+      <h2>
+        <pre>click an icon
+      click again to undo</pre>
+      </h2>
+    </div>
     <div class="bildschirm">
       <div class="boxen_gruppe">
         <div class="box"><img src="https://github.com/hbk-bs/the-archives-kaltesommer/raw/main/assets/images/Schnurrbartthumbnail_%20.png"></div>
@@ -34,5 +37,5 @@
   The coding process was challenging, particularly in implementing the video camera feature so that users could see themselves in real time. Another difficulty was managing the different elements—ensuring they could be layered correctly or removed from the screen when the corresponding icon was clicked again.
   Overall, in the future, I aim to refine the video display method and introduce additional elements to provide users with a more dynamic and varied experience.
   </p>
-  <footer> <p>&copy: 2025 Kirsten Visbach, All rights reserved</p></footer>
+  <footer> <p>&copy; 2025 Kirsten Visbach, All rights reserved</p></footer>
 </html>
