--- a/physical-computing/index.html
+++ b/physical-computing/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>physical computing</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="alternate" href="assets/css/base.css">
 </head>
 <body>
     <div class="navbar">
@@ -47,9 +48,9 @@
         <div class="column">
           <img src="isolating wires.png" alt="cables soldered together">
             <p> second idea: isolating the wires </p>
-           <p> In the end </p>
+           
         </div>
-        <p> ddd</p>
+        <p> </p>
     </div>
 </body>
 </html>
