--- a/5-projects-motion/index.html
+++ b/5-projects-motion/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motion</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="alternate" href="assets/css/base.css">
 </head>
 <body>
     <div class="navbar">
@@ -22,7 +23,7 @@
     <p> Reflection: Motion design is an essential part of webdesign, making animations more engaging and dynamic. In p5.js, motion is created through code, where objects follow a predefined path. In CSS, animations use keyframes and easing functions to create smoother transitions.
         For example in the zigzag motion project it is based on a mathematical calculation, rather than an ease-in function, which would make the movement feel smoother. The motion follows a strict zigzag path, controlled by circleProgress and conditional logic. The object moves between points in a linear way, without acceleration or deceleration.
         Working on this project showed me the difference between rigid mathematical motion and eased transitions. While p5.js allows for precise control, CSS animations make motion feel more natural. Combining both could improve how movement is used in visual communication.</p>
-
+        <footer> <p>&copy; 2025 Kirsten Visbach, All rights reserved</p></footer>
    
 </body>
 </html>
