--- a/analog-algorithm/index.html
+++ b/analog-algorithm/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analog Algorithm</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="alternate" href="assets/css/base.css">
 </head>
 <body>
     <div class="navbar">
@@ -13,7 +14,7 @@
         <a href="../reflection.html">Reflection</a>
     </div>
 
-   <img src="images/Analog-Algorithm-logo.png" alt="the archive font" class="led-light-font">
+
     <div class="flex">
         <div class="container">
             <div class="card">
@@ -58,7 +59,7 @@
         </div> 
         <p>Click on the title of the algortithm to get extra info.</p>  
         <p> I learned how to articulate specific requirements for achieving desired outcomes on a page. Additionally, trial and error are essential processes in obtaining optimal results, even if the first two algorithms did not meet my expectations. This project has shown me the diverse ways in which individuals interpret and respond to given prompts and how their results are unique in their own ways. Ultimately, it took me three attempts to achieve the results I wanted. However, this process proved valuable, as I gained an understanding of how important the reinforcement of formulating precise instructions is in attaining expected outcomes</p>
-        <footer> <p>&copy: 2025 Kirsten Visbach, All rights reserved</p></footer>
+        <footer> <p>&copy; 2025 Kirsten Visbach, All rights reserved</p></footer>
     </div>
    
     
