--- a/perspective/index.html
+++ b/perspective/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perspective Sketches</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css">
+    <link rel="alternate" href="assets/css/base.css">
     <script src="./modules/p5/lib/p5.js"></script>
     <script src="index.js"></script>
 
 </head>
     <body>
-        <!-- <img src="https://github.com/hbk-bs/the-archives-kaltesommer/raw/main/assets/images/thearchive-cover.PNG" alt="the archive font" id="super-rabbit">  -->
         <main>
             <div class="navbar">
                 <a href="../index.html">Home</a>
@@ -47,7 +47,6 @@
         </div>
     </main>
     <a href="index.js">source code</a>
-    <!-- <script src="./modules/p5/lib/addons/p5.sound.min.js"></> -->
-   <!-- <script src="./modules/@ff6347/p5-easing/dist/p5.easing.min.js"></script> -->
 </body>
+<footer> <p>&copy; 2025 Kirsten Visbach, All rights reserved</p></footer>
 </html>
