--- a/reflection.html
+++ b/reflection.html
@@ -26,5 +26,5 @@
     </div>
     
 </body>
-<footer> <p>&copy: 2025 Kirsten Visbach, All rights reserved</p> </footer>
+<footer> <p>&copy; 2025 Kirsten Visbach, All rights reserved</p> </footer>
 </html>
